# magicrpg

./: CMakeLists.txt  db_creator.c  main.c  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  toolchain
